--- a/www/app.html
+++ b/www/app.html
@@ -27,7 +27,7 @@
 </head>
 <!-- TODO: change the application name if it is adapted -->
 <body data-mwf-application="MyApplication" class="mwf-loading-app">
-
+<!--Branchtest__>
 <!-- TODO-REPEATED: add new views here -->
 <!--<div class="mwf-view mwf-view-initial" data-mwf-viewcontroller="MyInitialViewController">
 </div>-->
